// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/BackToTop Dark 1`] = `
<div>
  <div
    class="d-flex align-items-center"
  >
    <button
      aria-hidden="true"
      class="back-to-top dark btn btn-"
      id="back-to-top-btn"
      style="padding: 0px;"
      tabindex="-1"
      type="button"
    >
      <svg
        class="icon icon-secondary"
        enable-background="new 0 0 24 24"
        role="img"
        style="top: 0px;"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M18.6 10.1 12 3.5l-6.6 6.6.7.7 5.4-5.3V21h1V5.5l5.4 5.3.7-.7z"
        />
      </svg>
    </button>
    <button
      aria-hidden="true"
      class="back-to-top back-to-top-small dark btn btn-"
      id="back-to-top-btn"
      style="padding: 0px;"
      tabindex="-1"
      type="button"
    >
      <svg
        class="icon icon-secondary"
        enable-background="new 0 0 24 24"
        role="img"
        style="top: 0px;"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M18.6 10.1 12 3.5l-6.6 6.6.7.7 5.4-5.3V21h1V5.5l5.4 5.3.7-.7z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/BackToTop DarkShadow 1`] = `
<div>
  <div
    class="d-flex align-items-center"
  >
    <button
      aria-hidden="true"
      class="back-to-top dark shadow btn btn-"
      id="back-to-top-btn"
      style="padding: 0px;"
      tabindex="-1"
      type="button"
    >
      <svg
        class="icon icon-secondary"
        enable-background="new 0 0 24 24"
        role="img"
        style="top: 0px;"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M18.6 10.1 12 3.5l-6.6 6.6.7.7 5.4-5.3V21h1V5.5l5.4 5.3.7-.7z"
        />
      </svg>
    </button>
    <button
      aria-hidden="true"
      class="back-to-top back-to-top-small dark shadow btn btn-"
      id="back-to-top-btn"
      style="padding: 0px;"
      tabindex="-1"
      type="button"
    >
      <svg
        class="icon icon-secondary"
        enable-background="new 0 0 24 24"
        role="img"
        style="top: 0px;"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M18.6 10.1 12 3.5l-6.6 6.6.7.7 5.4-5.3V21h1V5.5l5.4 5.3.7-.7z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/BackToTop Esempio 1`] = `
<div>
  <button
    aria-hidden="true"
    class="back-to-top btn btn-primary"
    id="back-to-top-btn"
    style="padding: 0px;"
    tabindex="-1"
    type="button"
  >
    <svg
      class="icon icon-white"
      enable-background="new 0 0 24 24"
      role="img"
      style="top: 0px;"
      viewBox="0 0 24 24"
      xml:space="preserve"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        icon
      </title>
      <path
        d="M18.6 10.1 12 3.5l-6.6 6.6.7.7 5.4-5.3V21h1V5.5l5.4 5.3.7-.7z"
      />
    </svg>
  </button>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/BackToTop Shadow 1`] = `
<div>
  <div
    class="d-flex align-items-center"
  >
    <button
      aria-hidden="true"
      class="back-to-top shadow btn btn-primary"
      id="back-to-top-btn"
      style="padding: 0px;"
      tabindex="-1"
      type="button"
    >
      <svg
        class="icon icon-white"
        enable-background="new 0 0 24 24"
        role="img"
        style="top: 0px;"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M18.6 10.1 12 3.5l-6.6 6.6.7.7 5.4-5.3V21h1V5.5l5.4 5.3.7-.7z"
        />
      </svg>
    </button>
    <button
      aria-hidden="true"
      class="back-to-top back-to-top-small shadow btn btn-primary"
      id="back-to-top-btn"
      style="padding: 0px;"
      tabindex="-1"
      type="button"
    >
      <svg
        class="icon icon-white"
        enable-background="new 0 0 24 24"
        role="img"
        style="top: 0px;"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M18.6 10.1 12 3.5l-6.6 6.6.7.7 5.4-5.3V21h1V5.5l5.4 5.3.7-.7z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/BackToTop Small 1`] = `
<div>
  <button
    aria-hidden="true"
    class="back-to-top back-to-top-small btn btn-primary"
    id="back-to-top-btn"
    style="padding: 0px;"
    tabindex="-1"
    type="button"
  >
    <svg
      class="icon icon-white"
      enable-background="new 0 0 24 24"
      role="img"
      style="top: 0px;"
      viewBox="0 0 24 24"
      xml:space="preserve"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        icon
      </title>
      <path
        d="M18.6 10.1 12 3.5l-6.6 6.6.7.7 5.4-5.3V21h1V5.5l5.4 5.3.7-.7z"
      />
    </svg>
  </button>
</div>
`;
